<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/waxLogo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="70dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/wax" />

        <TextView
            android:id="@+id/infoText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_below="@+id/waxLogo"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/infoText1"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/infoText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_below="@+id/infoText1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/infoText2"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/loginProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoText2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="1dp"
            android:visibility="invisible" />

        <android.support.v7.widget.CardView
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/infoText2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:layout_margin="55dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/loginText"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>