<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fitsSystemWindows="true"
    tools:context=".views.CreateOffer">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/offer_create_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <android.support.v7.widget.CardView
            android:id="@+id/tradeURL"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            app:cardBackgroundColor="#33A9A9A9">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/tradeURLInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/trade_input"
                    android:hint="@string/tradeURLEnter"
                    android:inputType="text|textUri"
                    android:padding="7dp"
                    android:singleLine="true"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tradeURLInput"
                    android:layout_alignStart="@+id/tradeURLInput"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingStart="5dp"
                    android:text="Search for a friend"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/startQRCodeScanner"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_below="@+id/tradeURL"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="2dp"
            app:cardElevation="10dp"
            tools:layout_editor_absoluteX="55dp"
            tools:layout_editor_absoluteY="55dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/startQRCodeScannerText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="110dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/scanQRCode"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/startQRCodeScannerIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toStartOf="@+id/startQRCodeScannerText"
                    android:contentDescription="@string/opskins_logo"
                    app:srcCompat="@drawable/ic_photo_camera_white" />

                <ProgressBar
                    android:id="@+id/qrCodeInitProgress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:visibility="invisible" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startQRCodeScanner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:text="Recent"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recentTradePartnersRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/startTrading"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/startTrading"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="2dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/startTradingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/startTrading"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>