<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_profile_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="invisible">

        <android.support.v7.widget.CardView
            android:id="@+id/drawer_profile_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#33A9A9A9"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.pkmmte.view.CircularImageView
                    android:id="@+id/drawer_profile_pic"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="148dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="148dp" />

                <TextView
                    android:id="@+id/drawer_profile_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/drawer_profile_pic"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/drawer_profile_qrarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drawer_profile_card"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="#33A9A9A9"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/drawer_profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/tradeURL"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <EditText
                    android:id="@+id/drawer_profile_tradeURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/drawer_profile_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:ems="10"
                    android:hint="@string/tradeURL"
                    android:inputType="text|textUri" />

                <ImageView
                    android:id="@+id/drawer_profile_qrcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/drawer_profile_copyButton"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/QRCode" />

                <Button
                    android:id="@+id/drawer_profile_copyButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/drawer_profile_tradeURL"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="-10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/copyTradeURL" />


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/drawer_profile_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drawer_profile_qrarea"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#33A9A9A9"
            app:cardCornerRadius="2dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/notificationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="0dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="App Notifications " />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/notificationSwitch"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="fill_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="15 Minutes" />

                    <RadioButton
                        android:id="@+id/radio_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hourly" />

                    <RadioButton
                        android:id="@+id/radio_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Once per day" />
                </RadioGroup>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>
</ScrollView>